<resources>
    <string name="app_name" translatable="false">SRMS</string>
    <string name="app_desc">An app for a result management system that will assist in delivering outcomes with an effective system. In addition, we want to bring parents, instructors, and students together in one location.</string>
    <string name="onboardingExitButton">Get Started</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="guardian">Guardian</string>
    <string name="admin">Admin</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_username">Admin username</string>
    <string name="admin_password">Admin password</string>
    <string name="login">Login</string>
    <string name="guardian_login">Guardian Login</string>
    <string name="guardian_id">Guardian ID</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="faculty_login">Faculty Login</string>
    <string name="faculty_id">Faculty ID</string>
    <string name="student_login">Student Login</string>
    <string name="student_id">Student ID</string>
    <string name="result">Result</string>
    <string name="logout">Logout</string>
    <string name="student_info">Student Info</string>
    <string name="guardian_info">Guardian Info</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_result">Search Result</string>
    <string name="info">Info</string>
    <string name="verify_users">Verify Users</string>
    <string name="faculty_info">Faculty Info</string>
    <string name="app_logo" translatable="false">app logo</string>
    <string name="student_signup">Student Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="faculty_signup">Faculty Signup</string>
    <string name="guardian_signup">Guardian Signup</string>
    <string name="department">Department</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="program">Program</string>
    <string name="session">Session</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="relation">Relation</string>
    <string name="exam">Exam</string>
    <string name="gpa">GPA</string>
    <string name="mark">Mark</string>
    <string name="grade">Grade</string>
    <string name="cancel">Cancel</string>
    <string name="course">Course</string>
    <string name="code">Code</string>
    <string name="retype_password">Retype password</string>
    <string name="signup_fill_up_notice">Fill-up the following details carefully</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="accounts">Accounts</string>
    <string name="dashboard">Dashboard</string>
    <string name="pending_students">Pending Students</string>
    <string name="dept">Dept</string>
    <string name="delete">Delete</string>
    <string name="pending_faculties">Pending Faculties</string>
    <string name="pending_guardians">Pending Guardians</string>
    <string name="student_results">Student Results</string>
    <string name="toast_image" translatable="false">Toast image</string>
    <string name="notice_board">Notice Board</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="notice">Notice</string>
    <string name="description">Description</string>
    <string name="add_notice">Add Notice</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="upload_image_description">Upload\n256 X 256\nimage (JPG, PNG)</string>
    <string name="edit">Edit</string>
    <string name="verify">Verify</string>
</resources>