<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/studentSignupScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activity.FacultySignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/srms_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/faculty_signup"
            android:textSize="@dimen/text_28" />

        <TextView
            style="@style/CustomStyle.TextBox.Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/signup_fill_up_notice"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/facultySignupNameInput"
            style="@style/CustomStyle.Input.Text"
            android:hint="@string/name"
            android:importantForAutofill="noExcludeDescendants" />

        <Spinner
            android:id="@+id/facultySignupGenderSpinner"
            style="@style/CustomStyle.Input.Spinner"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:padding="5dp" />

        <Spinner
            android:id="@+id/facultySignupDeptSpinner"
            style="@style/CustomStyle.Input.Spinner"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/facultySignupContactInput"
            style="@style/CustomStyle.Input.Text"
            android:layout_marginTop="30dp"
            android:digits="0123456789+"
            android:hint="@string/contact"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="phone"
            android:maxLength="14" />

        <EditText
            android:id="@+id/facultySignupEmailInput"
            style="@style/CustomStyle.Input.Text"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/facultySignupAddressInput"
            style="@style/CustomStyle.Input.Text"
            android:layout_marginTop="30dp"
            android:hint="@string/address"
            android:importantForAutofill="noExcludeDescendants" />

        <EditText
            android:id="@+id/facultySignupPwInput"
            style="@style/CustomStyle.Input.Password"
            android:layout_marginTop="30dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:importantForAutofill="noExcludeDescendants" />

        <EditText
            android:id="@+id/facultySignupRetypePwInput"
            style="@style/CustomStyle.Input.Password"
            android:layout_marginTop="30dp"
            android:autofillHints="password"
            android:hint="@string/retype_password"
            android:importantForAutofill="noExcludeDescendants" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facultySignupImageSelectorButton"
            style="@style/CustomStyle.Button.Square"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:padding="3dp"
            android:text="@string/upload_image_description" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/facultySignupImagePreviewer"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircleImageShape"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facultySignupSignupButton"
            style="@style/CustomStyle.Button.Blue"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>