<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.LoginStudentFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/srms_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/student_login"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginStudentIdInput"
        style="@style/CustomStyle.Input.Text"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:hint="@string/student_id" />

    <EditText
        android:id="@+id/loginStudentPwInput"
        style="@style/CustomStyle.Input.Password"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:hint="@string/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginStudentButton"
        style="@style/CustomStyle.Button.Blue"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginStudentForgetPwButton"
        style="@style/CustomStyle.Button.TextOnly"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:text="@string/forget_password"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginStudentCreateAccountButton"
        style="@style/CustomStyle.Button.TextOnly"
        android:layout_width="match_parent"
        android:text="@string/create_new_account"
        android:textSize="17sp" />
</LinearLayout>