<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:scrollbars="none"
    tools:context=".activity.AdminVerifyUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/accounts"
            android:textSize="@dimen/text_28" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/adminPendingStudentButton"
            style="@style/CustomStyle.Button.LongWidth"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/student" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/adminPendingFacultyButton"
            style="@style/CustomStyle.Button.LongWidth"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/faculty" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/adminPendingGuardianButton"
            style="@style/CustomStyle.Button.LongWidth"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/guardian" />
    </LinearLayout>
</ScrollView>