<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UserNoticeBoardActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/notice_board"
        android:textAlignment="center"
        android:textSize="@dimen/text_28" />

    <LinearLayout
        android:id="@+id/userNoticeBoardButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/userNoticeBoardAddButton"
            style="@style/CustomStyle.Button.LongWidth"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:text="@string/add_notice" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/userNoticeBoardDeleteButton"
            style="@style/CustomStyle.Button.LongWidth"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:text="@string/delete_notice" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="30dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <TableLayout
            android:id="@+id/userNoticeBoardTable"
            style="@style/CustomStyle.Table.Simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_shape_30"
            android:padding="10dp">

            <TableRow style="@style/CustomStyle.Table.Simple.SimpleRow">

                <TextView
                    style="@style/CustomStyle.Table.Simple.SimpleRowText"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_18" />

                <TextView
                    style="@style/CustomStyle.Table.Simple.SimpleRowText"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_18" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>