<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:scrollbars="none"
    tools:context=".activity.StudentMarkSheetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/studentMarkSheetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:textAlignment="center"
            android:textSize="@dimen/text_28" />

        <TableLayout
            android:id="@+id/studentMarkSheetTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_30"
            android:backgroundTint="@color/surfaceContainer"
            android:padding="10dp">

            <TableRow style="@style/CustomStyle.Table.SimpleRow">

                <TextView
                    style="@style/CustomStyle.Table.SimpleRowText"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/code"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_18" />

                <TextView
                    style="@style/CustomStyle.Table.SimpleRowText"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/course"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_18" />

                <TextView
                    style="@style/CustomStyle.Table.SimpleRowText"
                    android:layout_width="60dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/gpa"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_18" />

                <TextView
                    style="@style/CustomStyle.Table.SimpleRowText"
                    android:layout_width="70dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/grade"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_18"
                    tools:ignore="TextSizeCheck" />
            </TableRow>
        </TableLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/studentMarkSheetPrintButton"
            style="@style/CustomStyle.Button.Primary"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>